--- a/.classpath
+++ b/.classpath
@@ -8,8 +8,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-9.0.0.M11/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-9.0.0.M11/lib/servlet-api.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/tomcat90/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/tomcat90/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
